[gd_scene load_steps=13 format=2]

[ext_resource path="res://Autoloads/GameUI.gd" type="Script" id=1]
[ext_resource path="res://examples/fonts/Poppins-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Images/E.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/Cave-Story.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://villager_npc_spritesheet/npc.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sounds/small_dialog_intro.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sounds/choice.wav" type="AudioStream" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.976471, 0.780392, 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.976471, 0.780392, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 0.701961 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="InteractionPrompt" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -20.0
margin_right = 90.0
margin_bottom = 20.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="InteractionPrompt"]
margin_left = 8.0
margin_top = 5.0
margin_right = 108.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.333333, 0.227451, 0.0862745, 1 )
text = "Press        to talk"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="InteractionPrompt"]
margin_left = 45.3682
margin_top = 4.24536
margin_right = 307.368
margin_bottom = 254.245
rect_scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBox" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCPortrait" type="TextureRect" parent="DialogBox"]
margin_left = 9.89078
margin_top = 10.0
margin_right = 79.8908
margin_bottom = 104.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCText" type="Label" parent="DialogBox"]
margin_left = 84.0
margin_top = 9.51276
margin_right = 384.0
margin_bottom = 89.5128
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.333333, 0.227451, 0.0862745, 1 )
text = "Hello, this is the merchant"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceContainer" type="VBoxContainer" parent="DialogBox"]
margin_left = 10.0
margin_top = 90.0
margin_right = 390.0
margin_bottom = 190.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice1" type="Button" parent="DialogBox/ChoiceContainer"]
margin_right = 380.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.333333, 0.227451, 0.0862745, 1 )
text = "Hello"
flat = true

[node name="Choice2" type="Button" parent="DialogBox/ChoiceContainer"]
margin_top = 31.0
margin_right = 380.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.333333, 0.227451, 0.0862745, 1 )
text = "Hey"
flat = true

[node name="Tween" type="Tween" parent="DialogBox"]

[node name="DialogStartSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="ChoiceSelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
